--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,7 @@ setw -g mode-keys vi
 
 bind-key x kill-pane
 
-set -g status-style fg="#ebdbb2",bg=default
+set -g status-style fg="#ffffff",bg=default
 set -g status-justify left 
 set -g status-left ""
 set -g status-right "#(date) [#S]"
